[GTK][WK2] Back items are shown in reverse order in MiniBrowser https://bugs.webkit.org/show_bug.cgi?id=126354

Reviewed by Carlos Garcia Campos.

The latest visited site for backward history should be placed on the top of a history stack
as a common behavior. However currently its order is reverse.

* MiniBrowser/gtk/BrowserWindow.c:
(browserWindowUpdateNavigationActions):


Canonical link: https://commits.webkit.org/144267@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161187 268f45cc-cd09-0410-ab3c-d52691b4dbfc